--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
 
     <application
-
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -35,6 +35,41 @@
             android:name=".TambahPetugasActivity"
             android:exported="true">
         </activity>
+
+        <!-- DetailKumbungActivity -->
+        <activity
+            android:name=".DetailKumbungActivity"
+            android:exported="true">
+        </activity>
+
+        <!-- ProfilActivity -->
+        <activity
+            android:name=".ProfilActivity"
+            android:exported="true">
+        </activity>
+
+        <!-- PengaturanThresholdActivity -->
+        <activity
+            android:name=".PengaturanThresholdActivity"
+            android:exported="true">
+        </activity>
+
+        <!-- RiwayatNotifikasiActivity -->
+        <activity
+            android:name=".RiwayatNotifikasiActivity"
+            android:exported="true">
+        </activity>
+
+
+        <!-- Firebase Messaging Service -->
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 
