--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
+    // Existing dependencies
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+
 
 
 }
